# marquee-agents

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py  test_report.py
IMPLEMENTATION/: analyse.md  claude_sdk.md  claude_summarise.md  cli_consistency.md  debug_mode.md  doctor.md  gemini_sdk.md  help_and_hello.md  init_and_config.md  logging.md  openai_sdk.md  regression.md  report.md  summarise.md  ux_improvements.md
qa_agent/: analyse.py  claude_provider.py  claude_summariser.py  cli.py  config.py  doctor.py  errors.py  gemini_provider.py  guide.py  init.py  openai_provider.py  output.py  providers.py  regression.py  report.py  report_compare.py  report_prefetch.py  report_timestamps.py  session_log.py  step_gate.py  summarise.py
qa_agent/agents/: __init__.py  comparison_agent.py  correlation_agent.py  dv_debug_agent.py  dv_debug_agent_agentic.py
qa_agent/tools/: __init__.py  loop.py  registry.py
qa_agent/tools/report/: __init__.py  assertions.py  fixtures.py  log_errors.py  scoreboard.py  security.py  signals.py  sim_metadata.py  tracker.py
scripts/: README.md  config.txt  filelist.txt  run_questa.sh
tests/: test_bash_exec_a.py  test_csh_cd.py  test_csh_interactive.py  test_csh_source.py  test_popen_argv0.py  test_source.csh
